set01/problem10_compile_errors.txt
Compilation started at 11/16/2023, 8:11:24 PM
Compilation finished at 11/16/2023, 8:11:24 PM
Compilation started at 11/16/2023, 8:52:36 PM
Compilation finished at 11/16/2023, 8:52:36 PM
Compilation started at 11/16/2023, 8:53:19 PM
Compilation finished at 11/16/2023, 8:53:19 PM
Compilation started at 11/16/2023, 8:55:22 PM
Compilation finished at 11/16/2023, 8:55:23 PM
Compilation started at 11/16/2023, 8:57:32 PM
Compilation finished at 11/16/2023, 8:57:33 PM
Compilation started at 11/20/2023, 10:27:01 AM
Compilation finished at 11/20/2023, 10:27:01 AM
Compilation started at 11/20/2023, 10:27:09 AM
Compilation finished at 11/20/2023, 10:27:09 AM
Compilation started at 11/20/2023, 10:28:15 AM
Compilation finished at 11/20/2023, 10:28:16 AM
Compilation started at 11/20/2023, 10:28:37 AM
Compilation finished at 11/20/2023, 10:28:38 AM
Compilation started at 11/20/2023, 10:28:57 AM
Compilation finished at 11/20/2023, 10:28:57 AM
Compilation started at 11/20/2023, 10:41:52 AM
Compilation finished at 11/20/2023, 10:41:52 AM
Compilation started at 11/20/2023, 10:42:43 AM
Compilation finished at 11/20/2023, 10:42:43 AM
Compilation started at 11/20/2023, 10:55:05 AM
Compilation finished at 11/20/2023, 10:55:05 AM
Compilation started at 11/20/2023, 10:55:14 AM
Compilation finished at 11/20/2023, 10:55:15 AM
Compilation started at 11/20/2023, 10:56:16 AM
Compilation finished at 11/20/2023, 10:56:17 AM
Compilation started at 11/20/2023, 10:59:59 AM
Compilation finished at 11/20/2023, 11:00:00 AM
Compilation started at 11/20/2023, 11:01:35 AM
Compilation finished at 11/20/2023, 11:01:36 AM
Compilation started at 11/20/2023, 6:12:16 PM
Compilation finished at 11/20/2023, 6:12:17 PM
Compilation started at 11/20/2023, 6:26:23 PM
Compilation finished at 11/20/2023, 6:26:23 PM
Compilation started at 11/20/2023, 6:33:57 PM
Compilation finished at 11/20/2023, 6:33:57 PM
Compilation started at 11/20/2023, 6:49:06 PM
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem10.c:87:1: error: expected identifier or '(' before 'for'
 for(int i=0,j=0;string1[i]!='\0' || string2[j]!='\0';i++,j++)
 ^~~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem10.c:87:25: error: 'i' undeclared here (not in a function)
 for(int i=0,j=0;string1[i]!='\0' || string2[j]!='\0';i++,j++)
                         ^
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem10.c:87:27: error: expected '=', ',', ';', 'asm' or '__attribute__' before '!=' token
 for(int i=0,j=0;string1[i]!='\0' || string2[j]!='\0';i++,j++)
                           ^~
c:\Users\AP\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Apoorva-Ramesh12\set01\problem10.c:87:55: error: expected '=', ',', ';', 'asm' or '__attribute__' before '++' token
 for(int i=0,j=0;string1[i]!='\0' || string2[j]!='\0';i++,j++)
                                                       ^~
Compilation finished at 11/20/2023, 6:49:06 PM
